--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,10 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   firebase_auth: ^4.19.4
   cloud_firestore: ^4.17.2
+  firebase_storage: ^11.7.1
+  image_picker: ^1.1.1
 
+  
 
 dev_dependencies:
   flutter_test:
